--- a/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
+++ b/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
@@ -33,8 +33,8 @@ header {
     }
   }
   .iconAdmin {
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     margin-right: 10px;
   }
@@ -47,6 +47,7 @@ header {
   margin: 0 auto;
 
   div {
+
     p {
       color: rgb(0, 81, 202);
       font-size: 1.4rem;
@@ -101,13 +102,14 @@ header {
 }
 
 .infoCategory {
-  
+
   span {
     color: rgb(48, 48, 48);
     width: 25%;
     min-width: 240px;
   }
 }
+
 table {
   width: 100%;
   background-color: #fff;
@@ -116,6 +118,7 @@ table {
 tr {
   width: 25%;
   text-align: center;
+  border: 1px solid green;
   
   td {
     padding: 4px 0px;
@@ -124,11 +127,48 @@ tr {
   
   th {
     font-size: 1.6rem;
-  width: 25%;
+    width: 25%;
   }
 }
 
-.loading {
-  border: 1px solid rgb(66, 66, 66);
-  // border-top: 2px solid blue;
+.modalBackground {
+  position: absolute;
+  background-color: #00000050;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+
+}
+.modalContent{
+  position: fixed;
+  background-color: #f2f2f2;
+  width: 50%;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  margin: 0 auto;
+}
+.loadbox {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: #fff;
+
+    .loading {
+      border: 1px solid rgb(66, 66, 66);
+      border-top: 3px solid rgb(0, 81, 202);
+      width: 50px;
+      height: 50px;
+      animation: rotateLoading 1s infinite;
+      border-radius: 50%;
+    }
+
+}
+
+@keyframes rotateLoading {
+  to {
+    transform: rotate(1turn);
+  }
 }
