--- a/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
+++ b/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
@@ -5,6 +5,8 @@
   font-size: 10px;
 }
 
+$text-color: rgb(90, 90, 90);
+
 .bgContainer {
   background-color: #f5f5f5;
 }
@@ -21,7 +23,7 @@ header {
 
   h3 {
     font-size: 1.4rem;
-    color: rgb(66, 66, 66);
+    color: $text-color;
   }
 
   div {
@@ -39,38 +41,22 @@ header {
     margin-right: 10px;
   }
 }
-.navigation {
-  padding: 30px 0px;
-  display: flex;
-  justify-content: space-between;
-  width: 95%;
-  margin: 0 auto;
 
-  div {
-
-    p {
-      color: rgb(0, 81, 202);
-      font-size: 1.4rem;
-      font-weight: bold;
-    }
-  }
-  
-}
 .category {
-  margin: 0 auto;
+  margin: 15px auto;
   display: flex;
   justify-content: space-evenly;
   background-color: #fff;
   text-align: center;
 
   a {
-    border-bottom: 2px solid blue;
+    border-bottom: 2px solid $text-color;
     padding: 10px 30px;
     width: 20%;
     text-decoration: none;
-    color: rgb(0, 81, 202);
+    color: $text-color;
     font-weight: bold;
-    font-size: 1.6rem;
+    font-size: 1.3rem;
   }
   
 }
@@ -88,13 +74,26 @@ header {
 }
 
 .infoHeader {
-  
-  button {
-    margin-left: 5px;
-  }
+  margin-bottom: 8px;
+  display: flex;
+  align-items: center;
+  padding: 15px 25px;
 
+  h2 {
+    font-size: 1.8rem;
+    color: $text-color;
+  }
+  select {
+    margin-left: 20px;
+    padding: 6px;
+  }
+  select>option {
+    text-align: center;
+    font-size: 1.4rem;
+  }
   .inputSearchClient {
     padding: 4px;
+    font-size: 1.5rem;
     outline: none;
     border: none;
     background-color: #e4e4e4;
@@ -104,7 +103,7 @@ header {
 .infoCategory {
 
   span {
-    color: rgb(48, 48, 48);
+    color: $text-color;
     width: 25%;
     min-width: 240px;
   }
@@ -127,6 +126,7 @@ tr {
   th {
     font-size: 1.6rem;
     width: 25%;
+    padding: 10px 0px;
   }
 }
 
@@ -139,6 +139,7 @@ tr {
   height: 100vh;
 
 }
+
 .modalContent{
   position: fixed;
   background-color: #f2f2f2;
@@ -149,9 +150,17 @@ tr {
   padding: 30px;
   margin: 0px auto;
 
+  .closeModal {
+    position: absolute;
+    padding: 5px;
+    border-radius: 8px;
+    right: 0;
+    top: 0;
+  }
+
   th {
     font-size: 1.6rem;
-    color: rgb(66, 66, 66);
+    color: $text-color;
     padding: 3px 8px;
   }
   tr {
@@ -171,7 +180,7 @@ tr {
   background-color: #fff;
 
     .loading {
-      border: 1px solid rgb(66, 66, 66);
+      border: 1px solid $text-color;
       border-top: 3px solid rgb(0, 81, 202);
       width: 50px;
       height: 50px;
@@ -204,11 +213,12 @@ tr {
     
   }
 
-  button {
+  .deleteBtn {
     position: absolute;
     left: -25px;
     padding: 4px;
   }
+
 }
 
 .statusPending {
