--- a/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
+++ b/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
@@ -206,14 +206,22 @@ tr {
   }
 }
 
-.paginationBtn {
-  width: 100%;
-  padding: 10px 0px;
+.paginationContainer {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
+  width: 100%;
+}
+.paginationButtons {
+  padding: 3px 8px;
+  background-color: #fff;
+  color: rgb(90, 90, 90);
+  border: none;
+  border-bottom: 1px solid #fff;
+  margin-right: 5px;
+  font-size: 1.8rem;
+  outline: none;
+}
+.paginationButtons:hover {
+  border-bottom: 1px solid rgb(90, 90, 90);
 
-  button {
-    margin-right: 5px;
-  }
 }
