--- a/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
+++ b/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
@@ -209,6 +209,7 @@ tr {
 .paginationContainer {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   width: 100%;
 }
 .paginationButtons {
@@ -223,5 +224,4 @@ tr {
 }
 .paginationButtons:hover {
   border-bottom: 1px solid rgb(90, 90, 90);
-
 }
