--- a/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
+++ b/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
@@ -43,7 +43,7 @@ header {
 }
 
 .category {
-  margin: 15px auto;
+  margin: 15px auto 0px;
   display: flex;
   justify-content: space-evenly;
   background-color: #fff;
@@ -68,7 +68,35 @@ button {
 }
 .dataBox {
   width: 100%;
-  height: 150px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  justify-content: center;
+  gap: 30px;
+  padding: 15px;
+
+  p {
+    border-radius: 12px;
+    background-color: #fff;
+    padding: 10px;
+    text-align: center;
+    display: block;
+    font-size: 1.6rem;
+    font-weight: bold;
+    color: $text-color;
+
+    span {
+      font-size: 1.6rem;
+    }
+
+    .countBox {
+      background-color: #000;
+      color: #fff;
+      padding: 1px 9px;
+      border-radius: 6px;
+      margin-left: 8px;
+      font-size: 1.6rem;
+    }
+  }
 }
 
 .infoHeader, .infoCategory {
