--- a/src/webparts/cobranca/components/Modal/Modal.module.scss
+++ b/src/webparts/cobranca/components/Modal/Modal.module.scss
@@ -10,6 +10,10 @@
   // align-items: center;
 }
 
+.inpt {
+  padding: 3px 8px;
+}
+
 .modalContent{
   position: fixed;
   background-color: #f2f2f2;
@@ -20,6 +24,7 @@
   padding: 30px;
   font-size: 1.8rem;
   margin: 25px;
+  animation: modal 0.2s;
 
   h1{
     text-align: center;
@@ -100,4 +105,18 @@
 }
 .paginationButtons:hover {
   border-bottom: 1px solid rgb(90, 90, 90);
+}
+td {
+  border: 1px solid #e4e4e4;
+}
+
+@keyframes modal {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -80px, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
