--- a/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
+++ b/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
@@ -253,3 +253,64 @@ tr {
 .paginationButtons:hover {
   border-bottom: 1px solid rgb(90, 90, 90);
 }
+
+.deleteInfo {
+  padding: 4px 8px;
+  border-radius: 8px;
+  border: none;
+  background-color: #fff;
+  font-weight: bold;
+  color: rgb(184, 0, 0);
+  font-size: 1.4rem;
+}
+
+.modalBackground {
+  position: absolute;
+  background-color: #00000050;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+}
+
+.modalContent{
+  position: fixed;
+  background-color: #f2f2f2;
+  width: 50%;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  font-size: 1.8rem;
+  margin: 25px;
+  animation: modal 0.2s;
+  justify-content: center;
+  text-align: center;
+  padding: 30px 15px;
+  text-transform: uppercase;
+
+  h1 {
+    font-size: 1.8rem;
+  }
+
+  div {
+    width: 100%;
+    padding: 15px 0px;
+    justify-content: center;
+    align-items: center;
+
+    button {
+      background-color: #007FFF;
+      color: #fff;
+      font-size: 1.6rem;
+      padding: 3px 14px;
+      font-weight: bold;
+      border: 1px solid #fff;
+      border-radius: 4px;
+      margin-right: 8px;
+    }
+  } 
+}
