--- a/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
+++ b/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
@@ -129,12 +129,33 @@ button {
     font-size: 1.4rem;
   }
   .inputSearchClient {
+    margin-left: 5px;
     padding: 4px;
     font-size: 1.5rem;
     outline: none;
     border: none;
     background-color: #e4e4e4;
   }
+}
+
+.pickerContainer {
+  margin: 5px 0px 0px 6px;
+  background-color: #fff;
+  border: 1px solid #00000040;
+  position: absolute;
+  animation: fade 0.4s;
+  
+  ul {
+    list-style: none;
+    li {
+      font-size: 1.4rem;
+      padding: 3px 15px;
+    }
+  }
+}
+
+.teste {
+  position: relative;
 }
 
 .infoCategory {
@@ -228,12 +249,6 @@ tr {
   color: rgb(41, 189, 41);
 }
 
-@keyframes rotateLoading {
-  to {
-    transform: rotate(1turn);
-  }
-}
-
 .paginationContainer {
   display: flex;
   flex-direction: row;
@@ -280,6 +295,7 @@ tr {
   position: fixed;
   background-color: #f2f2f2;
   width: 50%;
+  max-width: 650px;
   border-radius: 12px;
   display: flex;
   flex-direction: column;
@@ -313,4 +329,29 @@ tr {
       margin-right: 8px;
     }
   } 
+}
+
+@keyframes rotateLoading {
+  to {
+    transform: rotate(1turn);
+  }
+}
+
+@keyframes fade {
+  from {
+    transform: translate3d(0, -5px, 0);
+    opacity: 0;
+  }
+  to {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+@keyframes modal {
+  from {
+    transform: translate3d(0, -80px, 0);
+  }
+  to {
+    transform: translate3d(0, 0, 0);
+  }
 }
