--- a/src/webparts/cobranca/components/Modal/Modal.module.scss
+++ b/src/webparts/cobranca/components/Modal/Modal.module.scss
@@ -18,6 +18,7 @@
   position: fixed;
   background-color: #f2f2f2;
   width: 50%;
+  max-width: 650px;
   border-radius: 12px;
   display: flex;
   flex-direction: column;
