--- a/src/webparts/cobranca/components/Modal/Modal.module.scss
+++ b/src/webparts/cobranca/components/Modal/Modal.module.scss
@@ -1,13 +1,17 @@
+h1 {
+  text-transform: uppercase;
+}
+
 .modalBackground {
-  position: absolute;
+  position: fixed;
   background-color: #00000050;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100%;
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .inpt {
@@ -15,7 +19,7 @@
 }
 
 .modalContent{
-  position: fixed;
+  position: relative;
   background-color: #f2f2f2;
   width: 50%;
   max-width: 650px;
@@ -24,7 +28,6 @@
   flex-direction: column;
   padding: 30px;
   font-size: 1.8rem;
-  margin: 25px;
   animation: modal 0.2s;
 
   h1{
@@ -49,6 +52,7 @@
     border-radius: 12px;
     font-weight: bold;
     text-transform: uppercase;
+    font-size: 1.4rem;
   }
 
   .closeModal {
