--- a/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
+++ b/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
@@ -173,27 +173,31 @@ table {
   padding: 15px;
   border-radius: 12px;
 }
-
+th, td {
+  color: $text-color;
+  font-size: 1.6rem;
+  padding: 10px 0px;
+}
 tr {
   width: 25%;
   text-align: center;
-  
-  td {
-    padding: 4px 0px;
-    font-size: 1.6rem;
-    height: 50px;
-  }
-  
-  th {
-    font-size: 1.6rem;
-    width: 25%;
-    padding: 10px 0px;
-  }
 }
 
 .align {
   display: flex;
   align-items: center;
+  font-size: 1.6rem;
+  justify-content: center;
+
+  img {
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+  }
+  button {
+    margin-right: 5px;
+  }
 }
 
 .loadbox {
@@ -359,4 +363,17 @@ tr {
   to {
     transform: translate3d(0, 0, 0);
   }
+}
+
+.iconEdit, .iconDelete {
+  padding: 6px;
+  color: rgb(192, 192, 0);
+  background-color: #fff;
+}
+.iconEdit:hover, .iconDelete:hover {
+  background-color: #f2f2f2;
+}
+
+.iconDelete {
+  color: red;
 }
