--- a/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
+++ b/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
@@ -5,33 +5,40 @@
   font-size: 10px;
 }
 
-$text-color: rgb(90, 90, 90);
+$text-color: #5a5a5aff;
+
+@mixin flexConfig($direction, $justify, $align) {
+  display: flex;
+  flex-direction: $direction;
+  justify-content: $justify;
+  align-items: $align;
+}
+@mixin fontConfig($size, $color, $weight) {
+  font-size: $size;
+  color: $color;
+  font-weight: $weight;
+}
 
 .bgContainer {
   background-color: #f5f5f5;
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
+  @include flexConfig(row, space-between, center);
   width: 100%;
-  display: flex;
-  align-items: center;
   background-color: #fff;
   box-shadow: 0px 15px 10px -15px #e4e4e4;
   padding: 10px 10px 20px;
 
   h3 {
-    font-size: 1.4rem;
-    color: $text-color;
+    @include fontConfig(1.4rem, $text-color, none);
   }
 
   div {
-    display: flex;
-    align-items: center;
+    @include flexConfig(row, none, center);
 
-    span {
-      font-size: 1.4rem;
+    &:nth-child(2) {
+      @include fontConfig(1.3rem, $text-color, none);
     }
   }
 }
@@ -43,9 +50,8 @@ header {
 }
 
 .category {
+  @include flexConfig(row, space-evenly, none);
   margin: 15px auto 0px;
-  display: flex;
-  justify-content: space-evenly;
   background-color: #fff;
   text-align: center;
 
@@ -54,12 +60,11 @@ header {
     padding: 10px 30px;
     width: 20%;
     text-decoration: none;
-    color: $text-color;
-    font-weight: bold;
-    font-size: 1.3rem;
-  }
-  a:hover {
-    border-bottom: 2px solid $text-color;
+    @include fontConfig(1.3rem, $text-color, bold);
+
+    &:hover {
+      border-bottom: 2px solid $text-color;
+    }
   }
   
 }
@@ -80,41 +85,27 @@ button {
     padding: 10px;
     text-align: center;
     display: block;
-    font-size: 1.6rem;
-    font-weight: bold;
-    color: $text-color;
+    @include fontConfig(1.6rem, $text-color, bold);
 
     span {
-      font-size: 1.6rem;
-    }
-
-    .countBox {
-      background-color: #000;
-      color: #fff;
-      padding: 1px 9px;
-      border-radius: 6px;
-      margin-left: 8px;
       font-size: 1.6rem;
     }
   }
 }
 
 .infoHeader, .infoCategory {
+  @include flexConfig(row, space-between, none);
   background-color: #fff;
-  display: flex;
-  justify-content: space-between;
   padding: 8px;
 }
 
 .infoHeader {
   margin-bottom: 8px;
-  display: flex;
-  align-items: center;
   padding: 15px 25px;
+  @include flexConfig(row, none, center);
 
   h2 {
-    font-size: 1.8rem;
-    color: $text-color;
+    @include fontConfig(1.8rem, $text-color, none);
   }
   label {
     font-size: 1.1rem;
@@ -154,10 +145,6 @@ button {
   }
 }
 
-.teste {
-  position: relative;
-}
-
 .infoCategory {
 
   span {
@@ -174,20 +161,18 @@ table {
   border-radius: 12px;
 }
 th, td {
-  color: $text-color;
-  font-size: 1.6rem;
+  @include fontConfig(1.6rem, $text-color, none);
   padding: 10px 0px;
 }
 tr {
   width: 25%;
-  text-align: center;
+  text-align: center;  
 }
 
 .align {
-  display: flex;
-  align-items: center;
+  @include flexConfig(row, center, center);
   font-size: 1.6rem;
-  justify-content: center;
+  padding: 6px;
 
   img {
     border-radius: 50%;
@@ -201,15 +186,14 @@ tr {
 }
 
 .loadbox {
+  @include flexConfig(row, center, none);
   width: 100%;
-  display: flex;
-  justify-content: center;
   background-color: #fff;
   padding: 30px 0px;
 
     .loading {
       border: 1px solid $text-color;
-      border-top: 3px solid rgb(0, 81, 202);
+      border-top: 3px solid #0051ca;
       width: 50px;
       height: 50px;
       animation: rotateLoading 1s infinite;
@@ -217,66 +201,28 @@ tr {
     }
 
 }
-
-.dataModal {
-  display: flex;
-  position: relative;
-  align-items: center;
-  border: 1px solid green;
-  
-  div {
-    border: 1px solid red;
-    width: 100%;
-    display: flex;
-    text-align: center;
-    
-    span {
-      border: 1px solid yellow;
-      display: block;
-      width: 25%;
-      text-align: center;
-      display: flex;
-      justify-content: space-between;
-      font-size: 1.4rem;
-      padding: 3px 8px;
-    }
-    
-    
-  }
-
-  .deleteBtn {
-    position: absolute;
-    left: -25px;
-    padding: 4px;
-  }
-
-}
-
 .statusPending {
   color: red;
 }
 .statusFinish {
-  color: rgb(41, 189, 41);
+  color: #29bd29;
 }
 
 .paginationContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  @include flexConfig(row, center, none);
   width: 100%;
 }
 .paginationButtons {
   padding: 3px 8px;
   background-color: #fff;
-  color: rgb(90, 90, 90);
   border: none;
   border-bottom: 1px solid #fff;
   margin-right: 5px;
-  font-size: 1.8rem;
+  @include fontConfig(1.8rem, $text-color, none);
   outline: none;
 }
 .paginationButtons:hover {
-  border-bottom: 1px solid rgb(90, 90, 90);
+  border-bottom: 1px solid #5a5a5a;
 }
 
 .deleteInfo {
@@ -285,34 +231,30 @@ tr {
   border: none;
   background-color: #fff;
   font-weight: bold;
-  color: rgb(184, 0, 0);
   font-size: 1.4rem;
+  @include fontConfig(1.4rem, #b80000, none);
 }
 
 .modalBackground {
+  @include flexConfig(row, center, center);
   position: fixed;
   background-color: #00000050;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .modalContent{
+  @include flexConfig(column, center, none);
   position: relative;
   background-color: #f2f2f2;
   width: 50%;
   max-width: 650px;
   border-radius: 12px;
-  display: flex;
-  flex-direction: column;
   padding: 30px;
   font-size: 1.8rem;
   animation: modal 0.2s;
-  justify-content: center;
   text-align: center;
   padding: 30px 15px;
   text-transform: uppercase;
@@ -324,15 +266,11 @@ tr {
   div {
     width: 100%;
     padding: 15px 0px;
-    justify-content: center;
-    align-items: center;
 
     button {
       background-color: #007FFF;
-      color: #fff;
-      font-size: 1.6rem;
+      @include fontConfig(1.6rem, #fff, bold);
       padding: 3px 14px;
-      font-weight: bold;
       border: 1px solid #fff;
       border-radius: 4px;
       margin-right: 8px;
@@ -367,7 +305,7 @@ tr {
 
 .iconEdit, .iconDelete {
   padding: 6px;
-  color: rgb(192, 192, 0);
+  color: #c0c000;
   background-color: #fff;
 }
 .iconEdit:hover, .iconDelete:hover {
