--- a/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
+++ b/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
@@ -108,7 +108,7 @@ button {
   
   .inputSearchClient {
     margin-left: 5px;
-    padding: 4px;
+    padding: 6px;
     font-size: 1.5rem;
     outline: none;
     border: none;
@@ -128,6 +128,8 @@ button {
       button {
         position: absolute;
         right: 0;
+        bottom: -18px;
+        padding: 1px 4px;
       }
     }
   }
@@ -244,7 +246,7 @@ tr {
     padding: 15px 0px;
 
     button {
-      background-color: $primaryColor;
+      background-color: #007FFF;
       @include fontConfig(1.6rem, $primaryColor, bold);
       padding: 3px 14px;
       border: 1px solid $primaryColor;
