--- a/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
+++ b/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
@@ -139,7 +139,6 @@ table {
   width: 100%;
   background-color: $primaryColor;
   padding: 15px;
-  border-radius: 12px;
 }
 th, td {
   @include fontConfig(1.6rem, $textPrimaryColor, none);
@@ -202,11 +201,11 @@ tr {
 }
 .paginationButtons {
   padding: 3px 8px;
-  background-color: $primaryColor;
   border: none;
   border-bottom: 1px solid $primaryColor;
   margin-right: 5px;
-  @include fontConfig(1.8rem, $textPrimaryColor, none);
+  @include fontConfig(1.6rem, $textPrimaryColor, none);
+  background-color: #f5f5f5;
   outline: none;
 }
 .paginationButtons:hover {
