--- a/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
+++ b/src/webparts/cobranca/components/Cobranca/Cobranca.module.scss
@@ -8,6 +8,7 @@
 $primaryColor: #FFF;
 $secondaryColor: #E4E4E4;
 $textPrimaryColor: #5a5a5aff;
+$buttonPrimaryColor: #0051CA;
 
 @mixin flexConfig($direction, $justify, $align) {
   display: flex;
@@ -73,6 +74,7 @@ header {
 button {
   cursor: pointer;
 }
+
 .dataBox {
   width: 100%;
   display: grid;
@@ -135,43 +137,6 @@ button {
   }
 }
 
-table {
-  width: 100%;
-  background-color: $primaryColor;
-  padding: 15px;
-}
-th, td {
-  @include fontConfig(1.6rem, $textPrimaryColor, none);
-  padding: 10px 0px;
-}
-tr {
-  width: 25%;
-  text-align: center;  
-}
-
-.tdCtn{
-  @include flexConfig(row, center, center);
-  font-size: 1.6rem;
-  padding: 6px;
-
-  img {
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    margin-right: 15px;
-  }
-  button {
-    margin-right: 5px;
-  }
-}
-.tdCtn2 {
-  @include flexConfig(column, none, none);
-  @include fontConfig(1.6rem, $textPrimaryColor, none);
-  span {
-    margin: 5px 0px -11px;
-  }
-}
-
 .loadbox {
   @include flexConfig(row, center, none);
   width: 100%;
@@ -180,36 +145,12 @@ tr {
 
     .loading {
       border: 1px solid $textPrimaryColor;
-      border-top: 3px solid #0051ca;
+      border-top: 3px solid $buttonPrimaryColor;
       width: 50px;
       height: 50px;
       animation: rotateLoading 1s infinite;
       border-radius: 50%;
     }
-
-}
-.statusPending {
-  color: red;
-}
-.statusFinish {
-  color: #29bd29;
-}
-
-.paginationContainer {
-  @include flexConfig(row, center, none);
-  width: 100%;
-}
-.paginationButtons {
-  padding: 3px 8px;
-  border: none;
-  border-bottom: 1px solid $primaryColor;
-  margin-right: 5px;
-  @include fontConfig(1.6rem, $textPrimaryColor, none);
-  background-color: #f5f5f5;
-  outline: none;
-}
-.paginationButtons:hover {
-  border-bottom: 1px solid #5a5a5a;
 }
 
 .modalBackground {
@@ -220,39 +161,6 @@ tr {
   left: 0;
   width: 100vw;
   height: 100%;
-}
-
-.modalContent{
-  @include flexConfig(column, center, none);
-  position: relative;
-  background-color: #f2f2f2;
-  width: 50%;
-  max-width: 650px;
-  border-radius: 12px;
-  padding: 30px;
-  font-size: 1.8rem;
-  animation: modal 0.2s;
-  text-align: center;
-  padding: 30px 15px;
-  text-transform: uppercase;
-
-  h1 {
-    font-size: 1.8rem;
-  }
-
-  div {
-    width: 100%;
-    padding: 15px 0px;
-
-    button {
-      background-color: #007FFF;
-      @include fontConfig(1.6rem, $primaryColor, bold);
-      padding: 3px 14px;
-      border: 1px solid $primaryColor;
-      border-radius: 4px;
-      margin-right: 8px;
-    }
-  } 
 }
 
 @keyframes rotateLoading {
@@ -278,18 +186,4 @@ tr {
   to {
     transform: translate3d(0, 0, 0);
   }
-}
-
-.iconEdit, .iconDelete {
-  padding: 6px;
-  color: #c0c000;
-  background-color: $primaryColor;
-  
-  &:hover {
-    background-color: #F2F2F2;
-
-  }
-}
-.iconDelete {
-  color: #D30000;
 }
